Tela inicial de Grupo (index) - Feito

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chat Rooms</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Bem-vindo ao ChatRooms</h1>
+        <div>
+            <input type="text" placeholder="Digite seu nome de usuário">
+        </div>
+
+        <div>
+            <h2>Grupos Criados</h2>
+            <ul>
+
+            </ul>
+        </div>
+
+        <div>
+            <h2>Criar Novo Grupo</h2>
+            <input type="text" placeholder="Digite o nome do grupo">
+            <button>Criar grupo</button>
+        </div>
+    </div>
 </body>
 </html>
