Modificação de nome de 'index.html' para 'salas.html' e estilo criado (salas.css)

--- a/frontEnd/salas.html
+++ b/frontEnd/salas.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/salas.css">
     <title>Chat Rooms</title>
 </head>
 <body>
-    <div>
+    <div class="caixa">
         <h1>Bem-vindo ao ChatRooms</h1>
-        <div>
+        <div class="caixa-nome-usuario">
+            <h2>Usuário</h2>
+            <div></div>
             <input type="text" placeholder="Digite seu nome de usuário">
         </div>
 
-        <div>
+        <div class="caixa-lista-salas">
             <h2>Grupos Criados</h2>
             <ul>
-
+                <li>aaa</li>
             </ul>
         </div>
 
-        <div>
+        <div class="caixa-criar-grupo">
             <h2>Criar Novo Grupo</h2>
             <input type="text" placeholder="Digite o nome do grupo">
             <button>Criar grupo</button>
