finalizado tudo eu acho

--- a/frontEnd/chat.html
+++ b/frontEnd/chat.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="caixa-input-mensagem">
-            <a href="salas.html" class="link-voltar">Voltar</a>
+            <a id="sair-do-grupo" href="salas.html" class="link-voltar">Voltar</a>
             <input id="mensagem" type="text" placeholder="Digite sua mensagem...">
             <button id="enviar-mensagem">Enviar</button>
         </div>
