--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -3,12 +3,43 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=send" />
     <title>Document</title>
 </head>
 
 <body>
-    <h1>aaaaaaaaaaaaaaaaaaaaa</h1>
+    <section class="container">
+        <section class="login">
+            <h2>LOGIN</h2>
+            <form action="" class="login__form">
+                <input type="text" class="login__input" placeholder="Seu Nome" required>
+                <button type="submit" class="login__button">Entrar</button>
+            </form>
+        </section>
+
+        <section class="chat">
+            <section class="chat__messages">
+                <!-- <div class="message__self">
+                    asdasdas
+                </div>
+                <div class="message__other">
+                    <span class="message__sender">manual do dev</span>
+                    ola mundo
+                </div> -->
+            </section>
+
+            <form class="chat__form">
+                <input type="text" class="chat__input" placeholder="Digite uma mensagem" required>
+                <button type="submit" class="chat__button"><span class="material-symbols-outlined">
+                        send
+                    </span></button>
+            </form>
+        </section>
+    </section>
+
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
