--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=send" />
-    <title>Document</title>
+        href="https://fonts.googleapisS.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=send" />
+    <title>Sistema Chat</title>
 </head>
 
 <body>
@@ -15,6 +16,14 @@
             <h2>LOGIN</h2>
             <form action="" class="login__form">
                 <input type="text" class="login__input" placeholder="Seu Nome" required>
+                <div class="salas__input">
+                    <h2>ESCOLHA UMA SALA</h2>
+                    <select required class="login__salas" title="Escolha uma sala">
+                        <option value="" disabled selected>Selecione...</option>
+                        <option value="1">SALA 1</option>
+                        <option value="2">SALA 2</option>
+                    </select>
+                </div>
                 <button type="submit" class="login__button">Entrar</button>
             </form>
         </section>
