--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -27,7 +27,6 @@
                 <button type="submit" class="login__button">Entrar</button>
             </form>
         </section>
-
         <section class="chat">
             <section class="chat__messages">
                 <!-- <div class="message__self">
@@ -40,10 +39,8 @@
             </section>
 
             <form class="chat__form">
-                <input type="text" class="chat__input" placeholder="Digite uma mensagem" required>
-                <button type="submit" class="chat__button"><span class="material-symbols-outlined">
-                        send
-                    </span></button>
+                <input type="text" class="chat__input" placeholder="Digite uma mensagem (/sair para sair do chat)" required>
+                <button title="enviar" type="submit" class="chat__button">➜</button>
             </form>
         </section>
     </section>
